# sosp22

./: README.md  main.py  pyproject.toml  readme.md
cli/todo-list-cli/: README.md  lib.py  main.py
cli/todo-list-cli/data/: done.txt  todo.txt
cli/workshop/: README.md  config.yaml  journal.py  requirements.txt
cli/workshop/Paris-journal/: 2022-06-22.txt  2022-06-23.txt  2022-06-24.txt
discord-bot/: main.py
pygame-project/type-fighters/: README.md  client.py  game.py  network.py  requirements.txt  server.py
