[tool.poetry]
name = "discord-bot-tagger"
version = "0.1.0"
description = ""
authors = ["Sean Lu <seanlu2@illinois.edu>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"